@@ -1,3 +1,8 @@
+2013-09-02 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/z80/ralloc2.cc:
+	  Tuned register allcoation heuristic.
+
 2013-09-01 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/stm8/gen.c:
